# PrinterWatch

./: .gitignore  README.md
PrinterWatch/: Background_Request.py  ip.txt  main.py  requirements.txt  setup.cfg  snmp.bat
PrinterWatch/HTML/: WebServer.py  html_builder.py
PrinterWatch/Test/: PlotGenGUI.py  clients.csv  dataframeing.py  dataframing 2.py
PrinterWatch/excel_sheets/: ReadMeGrouped.txt  recent_model_stats.xlsx
PrinterWatch/lib/: override.csv
PrinterWatch/temp/: 1.3.6.1.2.1.43.11.txt  1.3.6.1.2.txt  1.3.6.1.4.1.1347.42.3.1.txt  1.3.6.1.4.1.1347.43.18.2.1.2.1.1.txt
PrinterWatch/user/: config.csv
