[metadata]
name = PrinterWatch
version = 0.22.1.7
author = razevortex
author_email = razevortex@googlemail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = *
project_urls =
    Bug Tracker = *
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src